cxf-tools-wadlto-jaxrs: close InputStream